--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
+    "redux": "^4.2.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
