--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recharts": "^2.2.0",
     "redux": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
